crates/aranya-policy-compiler/tests/data/scoping/else_block_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
4 |     return y
  |            ^ 'y' not in scope
